media queries updated, fixed link overflow

--- a/main.css
+++ b/main.css
@@ -33,6 +33,8 @@ footer{
 	padding: 20px;
 	color: #fff;
 	padding: 20px 6%;
+	margin-left: auto;
+	margin-right: auto;
 }
 p{
 	margin: 0;
@@ -97,11 +99,12 @@ nav ul, .noBullets{
 	color: white;
 	background-color: #13202d;
 	padding: 6%; 
-	max-height: 400px;
+	/*max-height: 400px;*/
 	background-image: url(LaptopKeyBoardOpacityChange.png);
 	background-position: center; 
 	background-repeat: no-repeat;
 	background-size: cover;
+
 }
 .hero h1{
 	font-size: 50px;
@@ -115,26 +118,26 @@ nav ul, .noBullets{
 .switchingWords span{
 	opacity: 0;
 	-webkit-animation-name: switching;
-	-webkit-animation-duration: 10s;
+	-webkit-animation-duration: 8s;
 	animation-name: switching;
-	animation-duration: 10s; 
+	animation-duration: 8s; 
 	animation-iteration-count: infinite;
 	/*position: absolute;*/
 }
 .switchingWords span:nth-child(2){
-	animation-delay: 2.5s: 
-	-ms-animation-delay: 2.5s;
-	-webkit-animation-delay: 2.5s;
+	animation-delay: 2s: 
+	-ms-animation-delay: 2s;
+	-webkit-animation-delay: 2s;
 }
 .switchingWords span:nth-child(3){
-	animation-delay: 5s: 
-	-ms-animation-delay: 5s;
-	-webkit-animation-delay: 5s;
+	animation-delay: 4s: 
+	-ms-animation-delay: 4s;
+	-webkit-animation-delay: 4s;
 }
 .switchingWords span:nth-child(4){
-	animation-delay: 7.5s: 
-	-ms-animation-delay: 7.5s;
-	-webkit-animation-delay: 7.5s;
+	animation-delay: 6s: 
+	-ms-animation-delay: 6s;
+	-webkit-animation-delay: 6s;
 }
 @-webkit-keyframes switching{
 	0% {opacity: 0;}
@@ -155,9 +158,9 @@ nav ul, .noBullets{
 	background-color: #a7c3e0;
 	padding: 13px;
 	border-radius: 5px;
-	margin: -6px;
+	margin: 0;
 	display: inline-block;
-	float: right;
+	float: none;
 	border-color: black;
 }
 .resumeHeader{
@@ -167,12 +170,18 @@ nav ul, .noBullets{
 	padding-top: 15px; 
 	text-align: right;
 }
+.toTop a:link, .toTop a:visited{
+	color: #104eb5;
+}
 .paraStyle{
 	margin: 10px 15px;
 }
 .paraImg{
-	float: left;
+	float: none;
 	padding-right: 10px;
+}
+.linkOverflow{
+	overflow-wrap: break-word;
 }
 
 @media (min-width: 700px){
@@ -202,17 +211,23 @@ nav ul, .noBullets{
 		font-size: 1em;
 	}
 }
-@media (max-width: 699px){
+@media (max-width: 699px) and (min-width: 547px){
 	body{
 		margin-top: 112px;
 	}
-	
 }
-/*@media (max-width: 544px){
-	body{
-		margin-top: 138px;
+@media(min-width: 501px){
+	.paraImg{
+		float: left;
 	}
-}*/
+}
+@media(min-width: 351px){
+	.button{
+		float: right;
+		margin: -6px;
+	}
+}
+
 
 
 
